La till fiender och skott-kollision

--- a/Template/Platformer.csproj
+++ b/Template/Platformer.csproj
@@ -43,6 +43,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BaseClass.cs" />
+    <Compile Include="Enemy.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Player Classes\Glasses.cs" />
     <Compile Include="Platform.cs" />
