--- a/Template/Platformer.csproj
+++ b/Template/Platformer.csproj
@@ -42,13 +42,15 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BaseClass.cs" />
+    <Compile Include="BaseObjects\BaseGun.cs" />
+    <Compile Include="BaseObjects\BaseClass.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Player Classes\Glasses.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="Player Classes\Bullet.cs" />
     <Compile Include="Player Classes\Gun.cs" />
+    <Compile Include="HealthBar.cs" />
     <Compile Include="Player Classes\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
